# formbot

./: .gitignore  .vercelignore  CU-FOR-001_Formulario_Contrapartes_Front.html  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
api/: index.py
config/data/: asteco_master_profile.json  cu_for_001_contrapartes_profile.json
config/mappings/: cu_for_001_contrapartes.yaml  excel_demo.yaml
docs/: architecture.md
examples/data/: input_demo.json
scripts/: create_sample_excel_template.py  log_change.py  log_decision.py  run_bulk_autofill.py  run_frontend.py  run_pipeline.py  run_pipeline_precise.py  verificar_offsets.py  verify_cu_for_001_field_and_signatures.ps1
src/formbot/: __init__.py
src/formbot/app/: __init__.py  bootstrap.py
src/formbot/application/: __init__.py  fill_form.py  precision_fill.py
src/formbot/domain/: __init__.py  exceptions.py  models.py
src/formbot/domain/ports/: __init__.py  data_provider.py  (+3 more)
src/formbot/infrastructure/: __init__.py
src/formbot/shared/: utils.py
src/formbot/web/: __init__.py  app.py
tests/: conftest.py  run_excel_mapping_test.py  run_system_tests.py
tests/fixtures/: README.md  fixture_form.xlsx  pipeline_data_missing_required.json  pipeline_data_valid.json  pipeline_mapping.yaml
tests/integration/: test_pipeline_full.py  test_web_frontend.py
tests/unit/: test_excel_adapter.py  test_field_scanner.py  test_fill_form.py  test_fill_form_aliases.py  test_label_strategy.py  test_normalize_text.py  test_precision_fill.py  test_section_aware.py  test_yaml_mapping_provider_precision.py
(+14 files in other folders)
